<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="language"
        android:icon="@drawable/language_icon"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_language">
        </ListPreference>
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_radius"
        android:inputType="textCapWords"
        android:icon="@drawable/radius_icon"
        android:key="radius"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_radius" />
</PreferenceScreen>
