<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.markpollution.AboutUsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:id="@+id/imgApp"
        android:src="@drawable/ic_apps"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_below="@+id/imgApp"
        android:text="@string/currentver"
        android:id="@+id/currentver"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/currentver"
        android:text="@string/devby"
        android:id="@+id/devby"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/devby"
        android:text="@string/addline1"
        android:id="@+id/devadd"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/devadd"
        android:text="@string/addline2"
        android:id="@+id/devadd2"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/devadd2"
        android:text="Copyright &#169; A MPT Product"
        android:id="@+id/devcopyright"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

    <TextView
        android:text="@string/rateus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/rateus" />
</RelativeLayout>
